fixed some overlapping CSS issues between the CocktailCard and CocktailCardLite

--- a/client/src/styles/CocktailCardLite.css
+++ b/client/src/styles/CocktailCardLite.css
@@ -1,4 +1,4 @@
-.card {
+.card-cocktail-lite {
     position: relative;
     width: 20rem;
     height: 20rem;
